--- a/react/src/index.css
+++ b/react/src/index.css
@@ -1,3 +1,60 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+    margin: 24px auto;
+    max-width: 344px;
+    font-size: 16px;
+  }
+  
+  nav {
+    display: grid;
+    grid: auto / auto-flow;
+    padding: 3px;
+    margin-bottom: 16px;
+    background: #eee;
+    border-radius: 10px;
+  }
+  
+  a {
+    display: block;
+    color: #000;
+    text-align: center;
+    line-height: 32px;
+    text-decoration: none;
+  }
+  
+  a.active {
+    background: #fff;
+    font-weight: 500;
+    border-radius: 8px;
+    box-shadow: 0 1px 4px rgba(0, 0, 0, 0.1);
+  }
+  
+  .slide-routes {
+    border-radius: 12px;
+  }
+  
+  .card {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 520px;
+    color: #fff;
+    font-size: 64px;
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+  }
+  
+  .home {
+    background: rgba(255, 100, 0, 0.8);
+  }
+  
+  .about {
+    background: rgba(0, 150, 255, 0.8);
+  }
+  
+  .news {
+    background: rgba(100, 0, 255, 0.8);
+  }
+  
